--- a/static/index.html
+++ b/static/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="root"/>
-    <script src="./public/bundle.js" type="text/javascript"></script>
+    <script src="./static/bundle.js" type="text/javascript"></script>
   </body>
 </html>
